--- a/src/sliit/intern/MainFrame.form
+++ b/src/sliit/intern/MainFrame.form
@@ -175,6 +175,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Click Me"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
